fix: resolve dev startup for better-sqlite3 in electron

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "preview": "electron-vite preview",
+    "postinstall": "npm run rebuild:native",
+    "rebuild:native": "electron-rebuild -f -w better-sqlite3",
     "typecheck": "tsc --noEmit -p tsconfig.json && tsc --noEmit -p src/renderer/tsconfig.json",
     "lint": "eslint . --ext .ts,.tsx"
   },
@@ -22,6 +24,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@electron/rebuild": "^3.7.1",
     "@types/node": "^22.10.1",
     "@types/better-sqlite3": "^7.6.12",
     "@types/react": "^18.3.12",
