--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "electron-vite preview",
     "postinstall": "npm run rebuild:native",
     "rebuild:native": "electron-rebuild -f -w better-sqlite3",
+    "seed:sample": "electron scripts/seed-sample.cjs",
+    "test": "vitest run",
     "typecheck": "tsc --noEmit -p tsconfig.json && tsc --noEmit -p src/renderer/tsconfig.json",
     "lint": "eslint . --ext .ts,.tsx"
   },
@@ -25,8 +27,8 @@
   },
   "devDependencies": {
     "@electron/rebuild": "^3.7.1",
-    "@types/node": "^22.10.1",
     "@types/better-sqlite3": "^7.6.12",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
@@ -40,6 +42,7 @@
     "prettier": "^3.4.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.15.0",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "vitest": "^1.6.0"
   }
 }
