--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@google/genai": "^1.18.0",
     "better-sqlite3": "^11.10.0",
     "dotenv": "^16.4.5",
+    "playwright": "^1.58.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
