--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qa-assistant",
-  "version": "0.1.0",
+  "version": "0.1.0-beta.1",
   "private": true,
   "description": "Local AI-powered QA Assistant desktop app",
   "main": "out/main/index.js",
@@ -8,6 +8,8 @@
   "scripts": {
     "dev": "electron-vite dev",
     "build": "electron-vite build && npm run build:copy-migrations",
+    "dist:win": "npm run build && electron-builder --win nsis --publish never",
+    "publish:win": "npm run build && electron-builder --win nsis --publish always",
     "build:copy-migrations": "node scripts/copy-main-migrations.cjs",
     "preview": "electron-vite preview",
     "postinstall": "npm run rebuild:native",
@@ -22,6 +24,7 @@
     "@google/genai": "^1.18.0",
     "better-sqlite3": "^11.10.0",
     "dotenv": "^16.4.5",
+    "electron-updater": "^6.7.3",
     "playwright": "^1.58.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -40,6 +43,7 @@
     "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-react": "^4.3.3",
     "electron": "^33.2.0",
+    "electron-builder": "^26.7.0",
     "electron-vite": "^2.3.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
@@ -51,5 +55,35 @@
     "typescript-eslint": "^8.15.0",
     "vite": "^5.4.11",
     "vitest": "^1.6.0"
+  },
+  "build": {
+    "appId": "com.qaassistant.app",
+    "productName": "QA Assistant",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "out/**/*",
+      "package.json"
+    ],
+    "asarUnpack": [
+      "**/*.node"
+    ],
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "TomasNiDo",
+        "repo": "qa-assistant"
+      }
+    ]
   }
 }
