--- a/package.json
+++ b/package.json
@@ -69,6 +69,12 @@
     "asarUnpack": [
       "**/*.node"
     ],
+    "extraResources": [
+      {
+        "from": "out/renderer/step-guide.html",
+        "to": "step-guide.html"
+      }
+    ],
     "win": {
       "target": [
         "nsis"
